# Spartan

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md
.cargo/: config
.github/workflows/: rust.yml  testudo.yml
benches/: commitments.rs  dotproduct.rs  nizk.rs  polycommit.rs  r1cs.rs  r1csproof.rs  snark.rs  spartan.rs  sumcheck.rs
examples/: cubic.rs
profiler/: nizk.rs  snark.rs
src/: app.rs  bullet.rs  commitments.rs  constraints.rs  dense_mlpoly.rs  errors.rs  group.rs  lib.rs  math.rs  nizk.rs  parameters.rs  poseidon_transcript.rs  product_tree.rs  profiler.rs  r1cs.rs  r1csinstance.rs  r1csproof.rs  random.rs  scalar.rs  scalar_25519.rs  sparse_mlpoly.rs  spartan.rs  sumcheck.rs  timer.rs  transcript.rs  unipoly.rs
src/nizk/: bullet.rs  mod.rs
src/scalar/: mod.rs  ristretto255.rs
